tests/snapshots/test__from_fixtures@const__const_in_any_of_2.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    anyOf:
      - type: number
      - type: string
      - const: 1
  rhs:
    anyOf:
      - const: 1
      - const: "1"
input_file: tests/fixtures/const/const_in_any_of_2.json
---
[
    Change {
        path: ".<anyOf:1>",
        change: ConstAdd {
            added: String("1"),
        },
    },
]
