tests/snapshots/test__from_fixtures@const__const_in_properties.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    const:
      key: value
  rhs:
    properties:
      key:
        const: value
input_file: tests/fixtures/const/const_in_properties.json
---
[]
