tests/snapshots/test__from_fixtures@const__const_string_to_other_const_string.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    const: foo
  rhs:
    const: bar
input_file: tests/fixtures/const/const_string_to_other_const_string.json
---
[
    Change {
        path: "",
        change: ConstRemove {
            removed: String("foo"),
        },
    },
    Change {
        path: "",
        change: ConstAdd {
            added: String("bar"),
        },
    },
]
